Adding more changes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
     <head>
         <title>Gym</title>
+        <h1>Head/h1</h1>
     </head>
 
     <body> 
-        <h1>Var hamnar detta?</h1>
-
+        <h1>Body/h1<h1>
+        <h2>Body/h2</h2>
     </body>
 </html>
