--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 
     <head>
         <title>Gym</title>
-        <h1>Head/h1</h1>
+        <h1>Head/h1
+            <p>Head/h1/p</p>
+            <p>asdad</p>
+        </h1>
+        <p>Head/p</p>
     </head>
 
     <body> 
+        <p>body/p</p>
         <h1>Body/h1<h1>
+            <p>body/h1/p</p>
         <h2>Body/h2</h2>
     </body>
 </html>
