--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <html>
 
     <head>
-        <title>Gym</title>
-        <h1>Head/h1
-            <p>Head/h1/p</p>
-            <p>asdad</p>
-        </h1>
-        <p>Head/p</p>
+        <title>Are you a belieber?</title>
     </head>
 
     <body> 
-        <p>body/p</p>
-        <h1>Body/h1<h1>
-        <h2>Body/h2</h2>
+        <p>Next up:
+            GYM APP
+        </p>
     </body>
 </html>
