--- a/html/index.html
+++ b/html/index.html
@@ -3,35 +3,9 @@
 <head>
     <meta charset="UTF-8">
 
+    <link href="../css/style.css" rel="stylesheet" type="text/css" />
+
     <script>
-        function fixElement(element, message) {
-            alert(message);
-            element.focus();
-        }
-        function isMailReady(form) {
-            var passed = false;
-            if (form.fullname.value == "") {
-                fixElement(form.fullname, "Information saknas i fältet NAMN!");
-            }
-            else if (form.email.value.indexOf("@") == -1 ||
-                form.email.value.indexOf(".") == -1) {
-                fixElement(form.email, "Ange en giltig epostadress i fältet EPOSTADRESS!");
-            }
-            else if (form.message.value == "") {
-                fixElement(form.message, "Du har inte skrivit något meddelande!");
-            }
-            else {
-                passed = true;
-            }
-            return passed;
-        }
-
-        var Handler = React.createClass({
-            componentDidMount: function () {
-                document.title = "Amazing Page";
-            }
-        });
-
         // document.onreadystatechange = function() {
         //     var pageList = [].slice.call(document.querySelectorAll(".navbar li"))
         //         .map(function(element) { return element.textContent; })
@@ -39,40 +13,27 @@
         // }
 
         // document.title = function() { if(){} };
-
     </script>
 
 </head>
 
 
 
-<body>
+<body class="body">
 
-    <div class='navbar'>
-            <a href="index.html"    title="Home">       Home</a>
-            <a href="Economy.html"  title="Economy">    Economy</a>
-            <a href="Health.html"   title="Health">     Health</a>
-            <a href="Projects.html" title="Projects"    >Projects</a>
-            <a href="Donation.html" title="Donation">   Donation</a>
-            <a href="Contact.html"  title="Contact">    Contact</a>
-            <a href="About.html"    title="About">      About</a>
-    </div>
-
-
-    <form name="kontakt" action="mailto:din_egen@adress.com" method="POST" enctype="text/plain" onSubmit="return isMailReady(this);">
-
-        <fieldset style="width: 450px;">
-            <legend>Kontaktformulär: </legend>
-            <p class="formInfo">Namn:</p>
-            <input name="fullname" type="TEXT" size="40">
-            <p class="formInfo">E-postadress:</p>
-            <input name="email" type="TEXT" size="40">
-            </td>
-            <p class="formInfo">Meddelande:</p>
-            <textarea rows="5" cols="40" name="message"></textarea>
-            <input name="SUBMIT" type="SUBMIT" value="Skicka">
-        </fieldset>
-    </form>
+    <nav>
+        <a href="index.html" title="Home"> Home</a>
+        <a href="Economy.html" title="Economy"> Economy</a>
+        <section class="econSec">
+            <a href="Cryptocurrency.html" title="View market live">Cryptocurrency</a>
+            <a href=Stocks.html title="View stock market">Stocks</a>
+        </section>
+        <a href="Health.html" title="Health"> Health</a>
+        <a href="Projects.html" title="Projects">Projects</a>
+        <a href="Donation.html" title="Donation"> Donation</a>
+        <a href="Contact.html" title="Contact"> Contact</a>
+        <a href="About.html" title="About"> About</a>
+    </nav>
 
 </body>
 
