--- a/html/Donation.html
+++ b/html/Donation.html
@@ -1,7 +1,18 @@
-<div class="david">
-    <h1>Make a difference!</h1>
-    <p class="pDavid">My dear friend David has been suffering from a severe syndrome over the years, being retardedness. So, now I urge the public to take a stance against this syndrome. Make a difference and contribute to make him and his function. He has a son which we all just want to be able to grow up in a somewhat normal household.</p>
-    <img src="../images/david.jpg" alt="My retarded friend">    
-    <p class="BTCaddress">fmoig4509ergodi</p>
-    <p class="pEndDavid">Thank you for your contribution!</p>    
-</div>
+<html>
+<head>
+    <link href="../css/style.css" rel="stylesheet" type="text/css"/>
+</head>
+
+
+<h1>Make a difference!</h1>
+
+<p class="pDavid">My dear friend David has been suffering from a severe syndrome of retardedness over the years. So, now I urge the public
+    to take a stance against this syndrome. Make a difference and contribute to make him and his function. He has a son which
+    we all just want to be able to grow up in a somewhat normal household.</p>
+
+<img src="../images/david.jpg" alt="My retarded friend">
+
+<p id=cryptoaddress>BTC address:</p><p>1MYtfX8RnCgmkY43jjAeyxmCw3ykjm3dxN</p>
+<p class="pDavid">Thank you for your contribution!</p>
+
+</html>
