--- a/html/Donation.html
+++ b/html/Donation.html
@@ -1,18 +1,26 @@
 <html>
+
 <head>
-    <link href="../css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="../css/style.css" rel="stylesheet" type="text/css" />
+
+
 </head>
 
 
-<h1>Make a difference!</h1>
+<body class="body">
+    <div class="davidTxt">
+        <h1 class="h1David">Make a difference!</h1>
 
-<p class="pDavid">My dear friend David has been suffering from a severe syndrome of retardedness over the years. So, now I urge the public
-    to take a stance against this syndrome. Make a difference and contribute to make him and his function. He has a son which
-    we all just want to be able to grow up in a somewhat normal household.</p>
+        <p>My dear friend David has been suffering from a severe syndrome of retardedness over the years. So, now I urge the
+            public to take a stance against this syndrome. Make a difference and contribute to make him and his function.
+            He has a son which we all just want to be able to grow up in a somewhat normal household.</p>
 
-<img src="../images/david.jpg" alt="My retarded friend">
+            <img id="imgDavid" src="../images/david.jpg" alt="My retarded friend">
 
-<p id=cryptoaddress>BTC address:</p><p>1MYtfX8RnCgmkY43jjAeyxmCw3ykjm3dxN</p>
-<p class="pDavid">Thank you for your contribution!</p>
+        <p style=color:yellow>BTC address: <strong>1MYtfX8RnCgmkY43jjAeyxmCw3ykjm3dxN</strong></p>
+        <p>Thank you for your contribution!</p>
+    </div>
+
+</body>
 
 </html>
