--- a/html/Donation.html
+++ b/html/Donation.html
@@ -8,19 +8,24 @@
 
 
 <body class="body">
-    <div class="davidTxt">
+    <div class="davidInit">
         <h1 class="h1David">Make a difference!</h1>
 
         <p>My dear friend David has been suffering from a severe syndrome of retardedness over the years. So, now I urge the
             public to take a stance against this syndrome. Make a difference and contribute to make him and his function.
             He has a son which we all just want to be able to grow up in a somewhat normal household.</p>
 
-            <img id="imgDavid" src="../images/david.jpg" alt="My retarded friend">
-
-        <p style=color:yellow>BTC address: <strong>1MYtfX8RnCgmkY43jjAeyxmCw3ykjm3dxN</strong></p>
-        <p>Thank you for your contribution!</p>
+        <img id="imgDavid" src="../images/david.jpg" alt="My retarded friend" title="Help a good cause!">
     </div>
 
+    <div class="davidInit">
+        <img id="imgBitcoin" src="../images/bitcoin.png" alt="Bitcoin logo" title="Bitcoin">
+        <span style=color:yellow>BTC address:
+            <strong>1MYtfX8RnCgmkY43jjAeyxmCw3ykjm3dxN</strong>
+        </span>
+
+        <p>Thank you for your contribution!</p>
+    </div>
 </body>
 
 </html>
