Worked on drop menu

--- a/html/Projects.html
+++ b/html/Projects.html
@@ -1,11 +1,18 @@
+<!DOCTYPE html>
 <html>
-<head>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>$('#nav').load('../html/menu.html');</script>
+    <link href="../css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 
-<body>
+<body class="body">
+
 
 </body>
+
 
 </html>
