--- a/html/menu.html
+++ b/html/menu.html
@@ -7,22 +7,12 @@
 
     <link href="../css/style.css" rel="stylesheet" type="text/css" />
 
-    <!-- <script>
-        // document.onreadystatechange = function() {
-        //     var pageList = [].slice.call(document.querySelectorAll(".navbar li"))
-        //         .map(function(element) { return element.textContent; })
-        //         .join(", ");
-        // }
-
-        // document.title = function() { if(){} };
-    </script> -->
-
 </head>
 
 
 
 <body class="body" id="home">
-    <nav class="navbar">
+    <nav class="navbar" id="nav">
         <a href="../html/index.html"> Home</a>
 
         <div class="dropdown" onclick="dropFunction(this);">
