Still drop menu

--- a/html/index.html
+++ b/html/index.html
@@ -26,9 +26,8 @@
         <a href="../html/index.html"> Home</a>
 
         <div class="dropdown" onclick="dropFunction(this);">
-            <button class="dropbtn">Economy
+            <button class="dropbtn icon">Economy
                 <i class="fa fa-caret-down"></i>
-                <span class="icon"></span>
             </button>
             <div class="dropdown-content">
                 <a href="../html/Economy/Cryptocurrency.html">Cryptocurrency</a>
@@ -45,6 +44,8 @@
                 <a href="../html/Health/Food.html">Food</a>
             </div>
         </div>
+
+
 
         <a href="Projects.html">Projects</a>
         <a href="Donation.html"> Donation</a>
