--- a/html/Donation.html
+++ b/html/Donation.html
@@ -20,11 +20,13 @@
 
     <div class="davidInit">
         <img id="imgBitcoin" src="../images/bitcoin.png" alt="Bitcoin logo" title="Bitcoin">
-        <span style=color:yellow>BTC address:
+        <span class=bitadd>BTC address:
             <strong>1MYtfX8RnCgmkY43jjAeyxmCw3ykjm3dxN</strong>
         </span>
+    </div>
 
-        <p>Thank you for your contribution!</p>
+    <div class=davidInit>
+        <p class=davidEnd>Thank you for your contribution!</p>
     </div>
 </body>
 
