--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 
 
 <body>
-    <nav class="clearfix">
+    <nav id="navbar">
         <ul>
             <li>
                 <a href="../html/index.html">Home</a>
