--- a/html/Contact.html
+++ b/html/Contact.html
@@ -15,7 +15,7 @@
     <h1 class=h1_contact>Kontakta mig</h1>
 
     <div class=text_contact>
-        <p>Vill du veta mer om exempelvis mina projekt, intressen här, professionella planet etc, vänligen
+        <p>Vill du veta mer om exempelvis mina projekt, gällande hemsidan eller vill dela med dig  etc, vänligen
             använd nedanstående formulär så återkommer jag snarast.</p>
     </div>
 
