--- a/html/Donation.html
+++ b/html/Donation.html
@@ -9,7 +9,7 @@
 
 <body class="body">
     <div class="davidInit">
-        <h1 class="h1David">Make a difference!</h1>
+        <h1 id="h1David">Make a difference!</h1>
 
         <p>My dear friend David has been suffering from a severe syndrome of retardedness over the years. So, now I urge the
             public to take a stance against this syndrome. Make a difference and contribute to make him and his function.
