--- a/html/index.html
+++ b/html/index.html
@@ -60,6 +60,7 @@
 
 
     <script src="../js/navbar-click.js"></script>
+    <script src="/node_modules/angular/angular.js"></script>
 
 <footer>© Boris 2018</footer>
 </body>
